--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,16 @@
 <div class="container mt-5">
   <mat-grid-list cols="2" rowHeight="2:1" gutterSize="20">
-    <mat-grid-tile>1</mat-grid-tile>
-    <mat-grid-tile>2</mat-grid-tile>
-    <mat-grid-tile>3</mat-grid-tile>
-    <mat-grid-tile>4</mat-grid-tile>
+    <mat-grid-tile>
+        <img src="../../assets/simple crud operations.png" alt="">
+    </mat-grid-tile>
+    <mat-grid-tile>
+        <img src="../../assets/coming soon.png" alt="">
+    </mat-grid-tile>
+    <mat-grid-tile>
+        <img src="../../assets/coming soon.png" alt="">
+    </mat-grid-tile>
+    <mat-grid-tile>
+        <img src="../../assets/coming soon.png" alt="">
+    </mat-grid-tile>
   </mat-grid-list>
 </div>
