--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,1 +1,5 @@
-<p>employee works!</p>
+<div class="container">
+    <div class="card p-5 mt-5">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo mollitia magnam quam consequuntur debitis, ut provident tenetur perferendis sit praesentium cupiditate at quibusdam repudiandae possimus earum iste sed doloribus quasi!
+    </div>
+</div>
