--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,5 +1,10 @@
 <div class="container">
-    <div class="card p-5 mt-5">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo mollitia magnam quam consequuntur debitis, ut provident tenetur perferendis sit praesentium cupiditate at quibusdam repudiandae possimus earum iste sed doloribus quasi!
-    </div>
+  <div class="card p-5 mt-5">
+    <mat-form-field appearance="outline">
+      <mat-label>Outline form field</mat-label>
+      <input matInput placeholder="Placeholder" />
+      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+      <mat-hint>Hint</mat-hint>
+    </mat-form-field>
+  </div>
 </div>
