--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -44,5 +44,13 @@
         <mat-radio-button value="2">Option 2</mat-radio-button>
       </mat-radio-group>
     </div>
+
+    <div>
+        <Label>Skills</Label>
+        <section class="example-section">
+            <mat-checkbox class="example-margin">Checked</mat-checkbox>
+            <mat-checkbox class="example-margin">Indeterminate</mat-checkbox>
+          </section>
+    </div>
   </div>
 </div>
