--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -46,11 +46,14 @@
     </div>
 
     <div>
-        <Label>Skills</Label>
-        <section class="example-section">
-            <mat-checkbox class="example-margin">Checked</mat-checkbox>
-            <mat-checkbox class="example-margin">Indeterminate</mat-checkbox>
-          </section>
+      <Label>Skills</Label>
+      <section class="example-section">
+        <mat-checkbox class="example-margin">Checked</mat-checkbox>
+        <mat-checkbox class="example-margin">Indeterminate</mat-checkbox>
+      </section>
     </div>
+
+    <mat-divider></mat-divider>
+    
   </div>
 </div>
