--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -54,6 +54,10 @@
     </div>
 
     <mat-divider></mat-divider>
-    
+
+    <div class="text-center mt-3">
+      <button mat-raised-button class="m-2">Clear</button>
+      <button mat-raised-button color="primary" class="m-2">Save</button>
+    </div>
   </div>
 </div>
