change the input fields

--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -46,27 +46,29 @@
       </mat-form-field>
 
       <mat-form-field>
-        <mat-label>Choose an option</mat-label>
+        <mat-label>Choose your department</mat-label>
         <mat-select>
-          <mat-option value="option1">Option 1</mat-option>
-          <mat-option value="option2" disabled>Option 2 (disabled)</mat-option>
-          <mat-option value="option3">Option 3</mat-option>
+          <mat-option value="IT">IT</mat-option>
+          <mat-option value="Network">Network</mat-option>
+          <mat-option value="Repair">Repair</mat-option>
         </mat-select>
       </mat-form-field>
 
       <div>
         <Label>Gender</Label>
         <mat-radio-group aria-label="Select an option">
-          <mat-radio-button value="1">Option 1</mat-radio-button>
-          <mat-radio-button value="2">Option 2</mat-radio-button>
+          <mat-radio-button value="M">M</mat-radio-button>
+          <mat-radio-button value="F">F</mat-radio-button>
         </mat-radio-group>
       </div>
 
       <div>
         <Label>Skills</Label>
         <section class="example-section">
-          <mat-checkbox class="example-margin">Checked</mat-checkbox>
-          <mat-checkbox class="example-margin">Indeterminate</mat-checkbox>
+          <mat-checkbox class="example-margin">Java</mat-checkbox>
+          <mat-checkbox class="example-margin">Angular</mat-checkbox>
+          <mat-checkbox class="example-margin">Spring Boot</mat-checkbox>
+          <mat-checkbox class="example-margin">AWS</mat-checkbox>
         </section>
       </div>
 
