--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -8,6 +8,7 @@
           placeholder="Employee Id"
           name="employeeId"
           [(ngModel)]="employee.employeeId"
+          disabled
         />
         <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
       </mat-form-field>
@@ -42,7 +43,7 @@
           name="employeeAddress"
           [(ngModel)]="employee.employeeAddress"
         />
-        <mat-icon matSuffix>home</mat-icon>
+        <mat-icon matSuffix>apartment</mat-icon>
       </mat-form-field>
 
       <mat-form-field>
@@ -61,6 +62,18 @@
           <mat-radio-button value="F">F</mat-radio-button>
         </mat-radio-group>
       </div>
+
+      <mat-form-field appearance="outline" class="mt-2">
+        <mat-label>Employee Skills</mat-label>
+        <input
+          matInput
+          placeholder="Employee Skills"
+          name="employeeSkills"
+          [(ngModel)]="employee.employeeSkills"
+          disabled
+        />
+        <mat-icon matSuffix>menu_book</mat-icon>
+      </mat-form-field>
 
       <div>
         <Label>Skills</Label>
