--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -48,7 +48,7 @@
     <ng-container matColumnDef="delete">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <button mat-icon-button color="warn">
+        <button mat-icon-button color="warn" (click)="deleteEmployee(element.employeeId)">
           <mat-icon>delete</mat-icon>
         </button>
       </td>
