--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -45,14 +45,23 @@
       <td mat-cell *matCellDef="let element">{{ element.employeeSkills }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="delete">
+    <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <button mat-icon-button color="warn" (click)="deleteEmployee(element.employeeId)">
-          <mat-icon>delete</mat-icon>
+        <button mat-icon-button color="primary" (click)="updateEmployee(element.employeeId)">
+          <mat-icon>edit</mat-icon>
         </button>
       </td>
     </ng-container>
+
+    <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="warn" (click)="deleteEmployee(element.employeeId)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
