--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,21 @@
 <div class="container mt-5">
   <mat-grid-list cols="2" rowHeight="2:1" gutterSize="20">
     <mat-grid-tile>
-        <img src="../../assets/simple crud operations.png" style="cursor:pointer;" alt="" routerLink="/employee">
+      <img
+        src="../../assets/simple crud operations.png"
+        style="cursor: pointer"
+        alt=""
+        routerLink="/employee"
+      />
     </mat-grid-tile>
     <mat-grid-tile>
-        <img src="../../assets/coming soon.png" alt="">
+      <img src="../../assets/coming soon.png" alt="" />
     </mat-grid-tile>
     <mat-grid-tile>
-        <img src="../../assets/coming soon.png" alt="">
+      <img src="../../assets/coming soon.png" alt="" />
     </mat-grid-tile>
     <mat-grid-tile>
-        <img src="../../assets/coming soon.png" alt="">
+      <img src="../../assets/coming soon.png" alt="" />
     </mat-grid-tile>
   </mat-grid-list>
 </div>
